[Texmap] Performance regression in texture uploads after r121223 https://bugs.webkit.org/show_bug.cgi?id=91897

Reviewed by Jocelyn Turcotte.

Rolling out r121223, with some conflict fixes.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::swizzleBGRAToRGBA):
(WebCore):
(WebCore::driverSupportsBGRASwizzling):
(WebCore::BitmapTextureGL::didReset):
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/110329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123894 268f45cc-cd09-0410-ab3c-d52691b4dbfc